--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>404 Page not found | Lil&#39;Log</title>
+<title>404 Page not found</title>
 <meta name="keywords" content="" />
 <meta name="description" content="Document my learning notes.">
 <meta name="author" content="Lilian Weng">
@@ -166,20 +166,15 @@ if (!doNotTrack) {
                     <span>FAQ</span>
                 </a>
             </li>
-            <li>
-                <a href="https://www.emojisearch.app/" title="emojisearch.app">
-                    <span>emojisearch.app</span>
-                </a>
-            </li>
         </ul>
     </nav>
 </header>
 <main class="main">
-<div class="not-found">404</div>
+<div class="not-found">404 -_-</div>
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="https://christine1729.github.io/">Lil&#39;Log</a></span>
+    <span>&copy; 2022 <a href="https://christine1729.github.io/">christine&#39;s nest</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
