--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 <title>404 Page not found</title>
 <meta name="keywords" content="" />
 <meta name="description" content="Document my learning notes.">
-<meta name="author" content="Lilian Weng">
+<meta name="author" content="christine1729">
 <link rel="canonical" href="https://christine1729.github.io/404.html" />
 <link crossorigin="anonymous" href="/assets/css/stylesheet.min.949307ebc5cfbfc5e27c5ec3d332ce0be9137ec4137e02aefc52cf0267172e22.css" integrity="sha256-lJMH68XPv8XifF7D0zLOC&#43;kTfsQTfgKu/FLPAmcXLiI=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://christine1729.github.io/tiger.ico">
@@ -116,7 +116,7 @@ if (!doNotTrack) {
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://christine1729.github.io/" accesskey="h" title="Lil&#39;Log (Alt + H)">Lil&#39;Log</a>
+            <a href="https://christine1729.github.io/" accesskey="h" title="christine&#39;s nest (Alt + H)">christine&#39;s nest</a>
             <span class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
